healthcare-plus/force-app/main/default/objects/Treatment_Plan__c/Treatment_Plan__c.object-meta.xml
<CustomObject>
    <label>Treatment Plan</label>
    <nameField>
        <displayFormat>TP-{00000}</displayFormat>
        <label>Treatment Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>