healthcare-plus/force-app/main/default/objects/Treatment_Plan__c/fields/Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis__c</fullName>
    <label>Primary Diagnosis</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>