healthcare-plus/force-app/main/default/objects/Treatment_Plan__c/fields/Primary_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Treatment Plans</relationshipLabel>
    <relationshipName>Treatment_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>