healthcare-plus/force-app/main/default/objects/Treatment_Plan__c/fields/Treatment_Goals__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Goals__c</fullName>
    <label>Treatment Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>