healthcare-plus/force-app/main/default/objects/Treatment_Plan__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <label>Treatment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medication Therapy</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Radiation Therapy</fullName>
            </value>
            <value>
                <fullName>Chemotherapy</fullName>
            </value>
            <value>
                <fullName>Immunotherapy</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Speech Therapy</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapy</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Psychotherapy / Counseling</fullName>
            </value>
            <value>
                <fullName>Cognitive Behavioral Therapy (CBT)</fullName>
            </value>
            <value>
                <fullName>Nutritional Therapy / Diet Management</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Palliative Care</fullName>
            </value>
            <value>
                <fullName>Hospice Care</fullName>
            </value>
            <value>
                <fullName>Preventive Care / Screening</fullName>
            </value>
            <value>
                <fullName>Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Alternative / Complementary Therapy (e.g., Acupuncture, Chiropractic)</fullName>
            </value>
            <value>
                <fullName>Lifestyle Modification (Exercise, Smoking Cessation, Weight Management)</fullName>
            </value>
            <value>
                <fullName>Supportive Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>